# pe-compile

./: .gitignore  Makefile  README.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
docs/: api.md  benchmarks.md  getting-started.md  index.md  limitations.md  myst.yml
pe_compile/: __init__.py  ast_parser.py  cli.py  extractor.py  generator.py  graph.py  js_generator.py  reform.py
tests/: __init__.py  test_ast_parser.py  test_cli.py  test_code_generator.py  test_dependency_graph.py  test_js_generator.py  test_reform.py  test_validation.py
